My Contribution Html

--- a/index.html
+++ b/index.html
@@ -1,30 +1,44 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>OUR-CONTRIBUTORS</title>
-  </head>
-  <body style="margin:0;padding:0; background:#183d5d">
-    <header style="background:#93c2db; color:	#FF69B4;padding:5px;font-family:"Inter Regular", "Helvetica", "Arial", san-serif;">
-      <h2>HacktoberfestLearning-2020</h2>
-    </header>
-    <h4 style="margin-left:20px;color:#ffffff;">vaibhav-singh</h4>
-    <iframe src="contributors/vaibhav-singh.html" width="70%" height="450"  style="display:block; border:1px solid black; margin:20px auto;"></iframe>
-    <h4 style="margin-left:20px;color:#ffffff;">yogesh</h4>
-    <iframe src="contributors/yogesh.html" width="70%" height="450"  style="display:block; border:1px solid black; margin:20px auto;"></iframe>
-    <h4 style="margin-left:20px;color:#ffffff;">phagun-jain</h4>
-    <iframe src="contributors/phagun-jain.html" width="70%" height="450"  style="display:block; border:1px solid black; margin:20px auto;"></iframe>
-    <h4 style="margin-left:20px;color:#ffffff;">palash-sureka</h4>
-    <iframe src="contributors/palash-sureka.html" width="70%" height="450"  style="display:block; border:1px solid black; margin:20px auto;"></iframe>
-    <h4 style="margin-left:20px;color:#ffffff;">Joe</h4>
-    <iframe src="contributors/Joe.html" width="70%" height="450"  style="display:block; border:1px solid black; margin:20px auto;"></iframe>
-    <h4 style="margin-left:20px;color:#ffffff;">haidarrifki</h4>
-    <iframe src="contributors/haidarrifki.html" width="70%" height="450"  style="display:block; border:1px solid black; margin:20px auto;"></iframe>
-    <h4 style="margin-left:20px;color:#ffffff;">onionsh</h4>
-    <iframe src="contributors/onionsh.html" width="70%" height="450"  style="display:block; border:1px solid black; margin:20px auto;"></iframe>
+
+<head>
+  <meta charset="utf-8">
+  <title>OUR-CONTRIBUTORS</title>
+</head>
+
+<body style="margin:0;padding:0; background:#183d5d">
+  <header style="background:#93c2db; color:	#FF69B4;padding:5px;font-family: 'Inter Regular', 'Helvetica' , 'Arial' ,
+    san-serif;">
+    <h2>HacktoberfestLearning-2020</h2>
+  </header>
+  <h4 style="margin-left:20px;color:#ffffff;">vaibhav-singh</h4>
+  <iframe src="contributors/vaibhav-singh.html" width="70%" height="450"
+    style="display:block; border:1px solid black; margin:20px auto;"></iframe>
+  <h4 style="margin-left:20px;color:#ffffff;">yogesh</h4>
+  <iframe src="contributors/yogesh.html" width="70%" height="450"
+    style="display:block; border:1px solid black; margin:20px auto;"></iframe>
+  <h4 style="margin-left:20px;color:#ffffff;">phagun-jain</h4>
+  <iframe src="contributors/phagun-jain.html" width="70%" height="450"
+    style="display:block; border:1px solid black; margin:20px auto;"></iframe>
+  <h4 style="margin-left:20px;color:#ffffff;">palash-sureka</h4>
+  <iframe src="contributors/palash-sureka.html" width="70%" height="450"
+    style="display:block; border:1px solid black; margin:20px auto;"></iframe>
+  <h4 style="margin-left:20px;color:#ffffff;">Joe</h4>
+  <iframe src="contributors/Joe.html" width="70%" height="450"
+    style="display:block; border:1px solid black; margin:20px auto;"></iframe>
+  <h4 style="margin-left:20px;color:#ffffff;">haidarrifki</h4>
+  <iframe src="contributors/haidarrifki.html" width="70%" height="450"
+    style="display:block; border:1px solid black; margin:20px auto;"></iframe>
+  <h4 style="margin-left:20px;color:#ffffff;">onionsh</h4>
+  <iframe src="contributors/onionsh.html" width="70%" height="450"
+    style="display:block; border:1px solid black; margin:20px auto;"></iframe>
+  <h4 style="margin-left:20px;color:#ffffff;">DropB1t</h4>
+  <iframe src="contributors/dropbit.html" width="70%" height="450"
+    style="display:block; border:1px solid black; margin:20px auto;"></iframe>
 
 
 
 
- </body>
+</body>
+
 </html>
