added bio about self

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
   <h4 style="margin-left:20px;color:#ffffff;">DropB1t</h4>
   <iframe src="contributors/dropbit.html" width="70%" height="450"
     style="display:block; border:1px solid black; margin:20px auto;"></iframe>
-
+  <h4 style="margin-left:20px;color:#ffffff;">ishan-agarwal</h4>
+  <iframe src="contributors/ishanagarwal.html" width="70%" height="450"
+    style="display:block; border:1px solid black; margin:20px auto;"></iframe>
 
 
 
