updated font, background, Contributorname

--- a/index.html
+++ b/index.html
@@ -3,42 +3,66 @@
 
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
   <title>OUR-CONTRIBUTORS</title>
 </head>
 
-<body style="margin:0;padding:0; background:#183d5d">
-  <header style="background:#93c2db; color:	#FF69B4;padding:5px;font-family: 'Inter Regular', 'Helvetica' , 'Arial' ,
-    san-serif;">
+<body>
+  <header>
     <h2>HacktoberfestLearning-2020</h2>
   </header>
-  <h4 style="margin-left:20px;color:#ffffff;">vaibhav-singh</h4>
+
+  <div class="card">
+  <h3>vaibhav-singh</h3>
   <iframe src="contributors/vaibhav-singh.html" width="70%" height="450"
     style="display:block; border:1px solid black; margin:20px auto;"></iframe>
-  <h4 style="margin-left:20px;color:#ffffff;">yogesh</h4>
+    </div>
+    <div class="card">
+  <h3>yogesh</h3>
   <iframe src="contributors/yogesh.html" width="70%" height="450"
     style="display:block; border:1px solid black; margin:20px auto;"></iframe>
-  <h4 style="margin-left:20px;color:#ffffff;">phagun-jain</h4>
+    </div>
+    <div class="card">
+  <h3>phagun-jain</h3>
   <iframe src="contributors/phagun-jain.html" width="70%" height="450"
     style="display:block; border:1px solid black; margin:20px auto;"></iframe>
-  <h4 style="margin-left:20px;color:#ffffff;">palash-sureka</h4>
+    </div>
+
+    <div class="card">
+  <h3>palash-sureka</h3>
   <iframe src="contributors/palash-sureka.html" width="70%" height="450"
     style="display:block; border:1px solid black; margin:20px auto;"></iframe>
-  <h4 style="margin-left:20px;color:#ffffff;">Joe</h4>
+    </div>
+    
+    <div class="card">
+  <h3>Joe</h3>
   <iframe src="contributors/Joe.html" width="70%" height="450"
     style="display:block; border:1px solid black; margin:20px auto;"></iframe>
-  <h4 style="margin-left:20px;color:#ffffff;">haidarrifki</h4>
+    </div>
+
+    <div class="card">
+           <h3>haidarrifki</h3>
   <iframe src="contributors/haidarrifki.html" width="70%" height="450"
     style="display:block; border:1px solid black; margin:20px auto;"></iframe>
-  <h4 style="margin-left:20px;color:#ffffff;">onionsh</h4>
-  <iframe src="contributors/onionsh.html" width="70%" height="450"
-    style="display:block; border:1px solid black; margin:20px auto;"></iframe>
-  <h4 style="margin-left:20px;color:#ffffff;">DropB1t</h4>
-  <iframe src="contributors/dropbit.html" width="70%" height="450"
-    style="display:block; border:1px solid black; margin:20px auto;"></iframe>
-  <h4 style="margin-left:20px;color:#ffffff;">ishan-agarwal</h4>
-  <iframe src="contributors/ishanagarwal.html" width="70%" height="450"
-    style="display:block; border:1px solid black; margin:20px auto;"></iframe>
+    </div>
 
+    <div class="card">
+           <h3>onionsh</h3>
+           <iframe src="contributors/onionsh.html" width="70%" height="450"
+    style="display:block; border:1px solid black; margin:20px auto;"></iframe>
+    </div>
+
+    <div class="card">
+        <h3>DropB1t</h3>
+        <iframe src="contributors/dropbit.html" width="70%" height="450"
+    style="display:block; border:1px solid black; margin:20px auto;"></iframe>
+        </div>
+
+    <div class="card">
+             <h3>ishan-agarwal</h3>
+             <iframe src="contributors/ishanagarwal.html" width="70%" height="450"
+    style="display:block; border:1px solid black; margin:20px auto;"></iframe>
+    </div>
 
 
 </body>
