test commit of buttons feature

--- a/index.html
+++ b/index.html
@@ -13,55 +13,93 @@
   </header>
 
   <div class="card">
-  <h3>vaibhav-singh</h3>
-  <iframe src="contributors/vaibhav-singh.html" width="70%" height="450"
+           <h3>vaibhav-singh</h3>
+           <iframe src="contributors/vaibhav-singh.html" width="70%" height="450"
     style="display:block; border:1px solid black; margin:20px auto;"></iframe>
-    </div>
-    <div class="card">
-  <h3>yogesh</h3>
-  <iframe src="contributors/yogesh.html" width="70%" height="450"
-    style="display:block; border:1px solid black; margin:20px auto;"></iframe>
-    </div>
-    <div class="card">
-  <h3>phagun-jain</h3>
-  <iframe src="contributors/phagun-jain.html" width="70%" height="450"
-    style="display:block; border:1px solid black; margin:20px auto;"></iframe>
+    <button class="GFG"
+    onclick="window.location.href = 'contributors/vaibhav-singh.html';">
+        Click Here
+    </button>
     </div>
 
     <div class="card">
-  <h3>palash-sureka</h3>
-  <iframe src="contributors/palash-sureka.html" width="70%" height="450"
+           <h3>yogesh</h3>
+           <iframe src="contributors/yogesh.html" width="70%" height="450"
     style="display:block; border:1px solid black; margin:20px auto;"></iframe>
+    <button class="GFG"
+    onclick="window.location.href = 'contributors/yogesh.html';">
+        Click Here
+    </button>
     </div>
-    
+
     <div class="card">
-  <h3>Joe</h3>
-  <iframe src="contributors/Joe.html" width="70%" height="450"
+          <h3>phagun-jain</h3>
+          <iframe src="contributors/phagun-jain.html" width="70%" height="450"
     style="display:block; border:1px solid black; margin:20px auto;"></iframe>
+    <button class="GFG"
+    onclick="window.location.href = 'contributors/phagun-jain.html';">
+        Click Here
+    </button>
+    </div>
+
+    <div class="card">
+              <h3>palash-sureka</h3>
+             <iframe src="contributors/palash-sureka.html" width="70%" height="450"
+    style="display:block; border:1px solid black; margin:20px auto;"></iframe>
+    <button class="GFG"
+    onclick="window.location.href = 'contributors/palash-sureka.html';">
+        Click Here
+    </button>
+    </div>
+
+    <div class="card">
+             <h3>Joe</h3>
+             <iframe src="contributors/Joe.html" width="70%" height="450"
+    style="display:block; border:1px solid black; margin:20px auto;"></iframe>
+    <button class="GFG"
+    onclick="window.location.href = 'contributors/Joe.html';">
+        Click Here
+    </button>
     </div>
 
     <div class="card">
            <h3>haidarrifki</h3>
-  <iframe src="contributors/haidarrifki.html" width="70%" height="450"
+          <iframe src="contributors/haidarrifki.html" width="70%" height="450"
     style="display:block; border:1px solid black; margin:20px auto;"></iframe>
+    <button class="GFG"
+    onclick="window.location.href = 'contributors/haidarrifki.html';">
+        Click Here
+    </button>
     </div>
 
     <div class="card">
            <h3>onionsh</h3>
            <iframe src="contributors/onionsh.html" width="70%" height="450"
     style="display:block; border:1px solid black; margin:20px auto;"></iframe>
+    <button class="GFG"
+    onclick="window.location.href = 'contributors/onionsh.html';">
+        Click Here
+    </button>
     </div>
 
     <div class="card">
         <h3>DropB1t</h3>
         <iframe src="contributors/dropbit.html" width="70%" height="450"
     style="display:block; border:1px solid black; margin:20px auto;"></iframe>
+    <button class="GFG"
+    onclick="window.location.href = 'contributors/dropbit.html';">
+        Click Here
+    </button>
         </div>
 
     <div class="card">
              <h3>ishan-agarwal</h3>
              <iframe src="contributors/ishanagarwal.html" width="70%" height="450"
     style="display:block; border:1px solid black; margin:20px auto;"></iframe>
+    <button class="GFG"
+    onclick="window.location.href = 'contributors/ishanagarwal.html';">
+        Click Here
+    </button>
     </div>
 
 
