added profile + image directory

--- a/contributors/eddie.html
+++ b/contributors/eddie.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Theme Simply Me</title>
+  <title>Eddie profile</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -21,14 +21,14 @@
 <body>
 
 <div class="container-fluid bg-1 text-center">
-  <h3>I am Joe</h3>
-  <img src="/images/frogo123.jpg" class="img-circle" alt="Clearly your link is broken!" width="350" height="350">
-  <h3>I'm a college student</h3>
+  <h3>I am Eddie</h3>
+  <img src="../images/frogo123.jpg" class="img-circle" alt="Clearly your link is broken!" width="350" height="350">
+  <h3>MY name is Eddie</h3>
 </div>
 
 <div class="container-fluid bg-2 text-center">
-  <h3>WHERE YOU CAN FIND ME</h3>
-  <h3><a href="https://github.com/josefnagy1999"> You can Github me here!!</a></h3>
+  <h3>This is my link to github</h3>
+  <h3><a href="https://www.https://github.com/frogo123"> You can subscribe to me here!!</a></h3>
 </div>
 <h3 style="text-align: center;"> <a class="w3-hover-text-black" href="../index.html">Home</a></h3>
 </body>
