custom scroll with marquee

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <header>
-    <h2>HacktoberfestLearning-2020</h2>
+<marquee behavior="scroll" scrollamount="12">  <h1>HacktoberfestLearning-2020</h1></marquee>
   </header>
 
   <div class="card">
