--- a/sample.html
+++ b/sample.html
@@ -7,17 +7,28 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <style>
-  .bg-1 { 
+
+<style>
+.bg-1 { 
     background-color: #1abc9c; /* Green */
     color: #ffffff;
   }
-  .bg-2 { 
+.bg-2 { 
     background-color: #474e5d; /* Dark Blue */
     color: #ffffff;
   }
-  </style>
+.footer {
+   position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   color: black;
+   text-align: center;
+ 
+}
+</style>
 </head>
+
 <body>
 
 <div class="container-fluid bg-1 text-center">
@@ -26,10 +37,15 @@
   <h3>I'm an YOUTUBE CHANNEL</h3>
 </div>
 
-<div class="container-fluid bg-2 text-center">
-  <h3>WHERE YOU CAN FIND ME</h3>
+<div class="container-fluid bg-2 text-center"> 
+  <h4>WHERE YOU CAN FIND ME</h4>
   <h3><a href="https://www.youtube.com/channel/UCwNJ7sohzMH4DvXHRE1aANg?sub_confirmation=1"> You can subscribe to me here!!</a></h3>
 </div>
 <h3 style="text-align: center;"> <a class="w3-hover-text-black" href="../index.html">Home</a></h3>
+
+<div class="footer">
+    <p><h2>Made with &#10084;&#65039</h2> <br> Auto Bot | 2020</p>
+  </div>
+  
 </body>
 </html>
